# kardias-api

./: .gitignore  Dockerfile  README.md  config.py  make_api_key.py  pyproject.toml  requirements.txt  try_api.ipynb
app/: README.md  __init__.py  config.py  main.py
app/admin/: auth.py  methods.py  models.py  schemas.py
app/api/: __init__.py
app/api/html/: __init__.py
app/api/v1/: __init__.py  appearance.py  clean.py  diagnosis_general.py  diagnosis_main.py  ml_predict.py  origin.py  patient.py  patient_appearance.py  patient_diagnosis_general.py  patient_diagnosis_main.py  patient_origin.py  patient_surgical_procedure.py  storage.py  surgical_procedure.py
app/crud/: appearance.py  diagnosis_general.py  diagnosis_main.py  generic.py  origin.py  patient.py  surgical_procedure.py
app/db/: setup.py
app/html/: __init__.py  home.py
app/ml/models/: kmeans.py  kmeans_10_a_2022-12-07.pkl  kmeans_10_data.csv
app/ml/pre_processing/: kmeans.py
app/models/: api_schemas.py  db_models.py  db_schemas.py  definitions.py  ml_schemas.py
app/s3/: setup.py
docs/: README.md  conf.py  database.md  index.html  index.rst  schemas.md
docs/_build/doctrees/: README.doctree  database.doctree  environment.pickle  index.doctree  schemas.doctree
docs/_build/html/: .buildinfo  README.html  database.html  genindex.html  index.html  objects.inv  schemas.html  search.html  searchindex.js
docs/_build/html/_sources/: README.md.txt
psql/: schema_part1.sql  schema_part2.sql
templates/: home.html
tests/: test_api.py
